[gd_scene load_steps=7 format=2]

[ext_resource path="res://Game.tscn" type="PackedScene" id=1]
[ext_resource path="res://Viewport.gd" type="Script" id=2]
[ext_resource path="res://AndroidUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://Cleared.tscn" type="PackedScene" id=4]
[ext_resource path="res://MenuTopBar.tscn" type="PackedScene" id=5]
[ext_resource path="res://Camera2D.gd" type="Script" id=6]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
current = true
script = ExtResource( 6 )

[node name="Game" parent="Camera2D" instance=ExtResource( 1 )]

[node name="ShakeTimer" type="Timer" parent="Camera2D"]
wait_time = 0.4
one_shot = true

[node name="PlayerTimer" type="Timer" parent="Camera2D"]
wait_time = 0.4
one_shot = true

[node name="GuiCanvas" type="CanvasLayer" parent="Camera2D"]

[node name="ColorRect" type="ColorRect" parent="Camera2D/GuiCanvas"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 1, 0, 0, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Cleared" parent="Camera2D/GuiCanvas" instance=ExtResource( 4 )]

[node name="MenuTopBar" parent="Camera2D/GuiCanvas" instance=ExtResource( 5 )]

[node name="AndroidUI" parent="Camera2D/GuiCanvas" instance=ExtResource( 3 )]
[connection signal="new_game" from="." to="." method="_on_Control_new_game"]
[connection signal="next_level" from="." to="." method="_on_Control_next_level"]
[connection signal="timeout" from="Camera2D/PlayerTimer" to="Camera2D" method="_on_PlayerTimer_timeout"]
